fix: make BoothModal word wrappable & limit width to not overflow

--- a/src/components/BoothModal.module.css
+++ b/src/components/BoothModal.module.css
@@ -22,7 +22,7 @@
 /* Modal Content */
 .modalContent {
   width: fit-content;
-  max-width: 800px;
+  max-width: 80%;
   height: auto;
   background-color: black;
   padding: 20px;
@@ -34,4 +34,8 @@
 
 .unselectableSpan {
   user-select: none;
+}
+
+.wrappedP {
+  word-wrap: break-word;
 }
